<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/imageTask"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:layout_marginVertical="@dimen/halfElementPadding"
    android:background="@drawable/rounded_corner_background"
    android:backgroundTint="?colorPrimary"
    android:padding="@dimen/elementPadding">

    <ImageView
        android:id="@+id/taskImage_editTasks"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/task_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_placeholder" />

    <TextView
        android:id="@+id/titleTask_editTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementPadding"
        android:text="@string/placeholder"
        android:textAlignment="viewStart"
        android:textColor="?colorOnPrimary"
        android:textSize="@dimen/h2"
        android:textStyle="bold"
        android:typeface="sans"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskImage_editTasks"
        app:layout_constraintTop_toTopOf="@+id/taskImage_editTasks" />

    <TextView
        android:id="@+id/countStepsIndicator_editTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementPadding"
        android:layout_marginTop="@dimen/elementPadding"
        android:text="@string/placeholder"
        android:textColor="?colorOnPrimary"
        android:textSize="@dimen/p"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/taskImage_editTasks"
        app:layout_constraintTop_toBottomOf="@+id/titleTask_editTasks" />

    <ImageButton
        android:id="@+id/editTaskButton_editTasks"
        style="@style/Theme.SimpleTasks.IconButtonSecondary"
        android:contentDescription="@string/edit_task"
        app:layout_constraintBottom_toBottomOf="@+id/deleteTaskButton_editTasks"
        app:layout_constraintEnd_toEndOf="@+id/titleTask_editTasks"
        app:layout_constraintTop_toTopOf="@+id/deleteTaskButton_editTasks"
        app:srcCompat="@drawable/ic_outline_edit_24" />

    <ImageButton
        android:id="@+id/deleteTaskButton_editTasks"
        style="@style/Theme.SimpleTasks.IconButtonSecondary"
        android:layout_marginEnd="@dimen/elementPadding"
        android:contentDescription="@string/delete_task"
        app:layout_constraintBottom_toBottomOf="@+id/taskImage_editTasks"
        app:layout_constraintEnd_toStartOf="@+id/editTaskButton_editTasks"
        app:layout_constraintTop_toTopOf="@+id/countStepsIndicator_editTasks"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_outline_delete_outline_24" />


</androidx.constraintlayout.widget.ConstraintLayout>